col 3 edit in item

--- a/pakage.html
+++ b/pakage.html
@@ -31,36 +31,36 @@
         </div>
 
         <!-- Package Area -->
-        <div class="row justify-content-center py-3">
-            <div class="col-md-8 col-12">
-                <div class="row my-3 d-flex align-items-center">
-                    <div class="col-md-3 col-6 mb-3">
-                        <a href="#">
-                            <div class="pack-lable">
-                                <img src="images/mpt-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
-                                <div class="mpt-pay pack-text">MPT</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-3 col-6 mb-3">
-                        <a href="#">
-                            <div class="pack-lable">
-                                <img src="images/ok-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
-                                <div class="ok-pay pack-text">OK $</div>
-                            </div>
-                        </a>
-                    </div>
 
-                    <div class="col-md-3 col-6 mb-3">
-                        <a href="#">
-                            <div class="pack-lable">
-                                <img src="images/onepay-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
-                                <div class="one-pay pack-text">ONE PAY</div>
-                            </div>
-                        </a>
+        <div class="row my-3 d-flex justify-content-center my-4 py-3">
+            <div class="col-md-3 col-4 mb-3">
+                <a href="#">
+                    <div class="pack-lable">
+                        <div class="des-lable">- 5%</div>
+                        <img src="images/mpt-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
+                        <div class="mpt-pay pack-text">MPT</div>
                     </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-4 mb-3">
+                <a href="#">
+                    <div class="pack-lable">
+                        <img src="images/ok-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
+                        <div class="ok-pay pack-text">OK $</div>
+                    </div>
+                </a>
+            </div>
 
-                    <div class="col-md-3 col-6 mb-3">
+            <div class="col-md-3 col-4 mb-3">
+                <a href="#">
+                    <div class="pack-lable">
+                        <img src="images/onepay-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
+                        <div class="one-pay pack-text">ONE PAY</div>
+                    </div>
+                </a>
+            </div>
+
+            <!-- <div class="col-md-3 col-4 mb-3">
                         <a href="#">
                             <div class="pack-lable">
                                 <img src="images/kbzpay-logo.jpg" alt="" class="pack-item pack-logo img-fluid">
@@ -68,10 +68,9 @@
                             </div>
                         </a>
 
-                    </div>
-                </div>
-            </div>
+                    </div> -->
         </div>
+
 
     </div>
 
